--- a/GameThis/res/layout/activity_home.xml
+++ b/GameThis/res/layout/activity_home.xml
@@ -9,8 +9,8 @@
     tools:context="br.com.recidev.gamethis.HomeActivity" >
 
     <TextView
+        android:id="@+id/nome"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world2" />
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
