--- a/GameThis/res/layout/activity_login.xml
+++ b/GameThis/res/layout/activity_login.xml
@@ -19,10 +19,10 @@
                     android:singleLine="true" />
     
     		<EditText
-                    android:id="@+id/password"
+                    android:id="@+id/senha"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_password"
+                    android:hint="@string/prompt_senha"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:singleLine="true" />
