--- a/GameThis/res/values/strings_activity_inscricao.xml
+++ b/GameThis/res/values/strings_activity_inscricao.xml
@@ -2,10 +2,7 @@
 <resources>
  	<string name="texto_botao_nome">Nome</string>
  	<string name="texto_botao_email">Email</string>
-    <string name="texto_botao_password">Senha</string>
-	
+    <string name="texto_botao_senha">Senha</string>
     <string name="texto_botao_avatar_inscricao">Selecionar Avatar</string>
-    
     <string name="texto_botao_inscricao_enviar">Enviar</string>
-    
 </resources>
