--- a/GameThis/res/layout/activity_inscricao.xml
+++ b/GameThis/res/layout/activity_inscricao.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.recidev.gamethis.InscricaoActivity" >
+    tools:context="br.com.recidev.gamethis.ui.InscricaoActivity" >
 
     <ImageView
         android:id="@+id/imagemDefinida"
