--- a/GameThis/res/layout/activity_login.xml
+++ b/GameThis/res/layout/activity_login.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="br.com.recidev.gamethis.LoginActivity" >
+    tools:context="br.com.recidev.gamethis.ui.LoginActivity" >
     
     		<AutoCompleteTextView
                     android:id="@+id/email"
