--- a/GameThis/res/layout/activity_jogadores.xml
+++ b/GameThis/res/layout/activity_jogadores.xml
@@ -31,7 +31,11 @@
          android:layout_width="50dp"
          android:layout_height="40dp"
          android:layout_alignParentRight="true"
-         />
+         android:layout_marginTop="75dp"
+         android:layout_marginRight="20dp"
+         android:text="@string/ok_confirmar_lista_jogadores" />
+     
+     
     
      <ListView  android:layout_width="fill_parent"   
 			    android:layout_height="150dp"   
