Pequenos ajustes realizados em relação à interface

--- a/GameThis/res/layout/list_pesquisar_jogador.xml
+++ b/GameThis/res/layout/list_pesquisar_jogador.xml
@@ -29,6 +29,8 @@
               	 android:layout_height="match_parent"
               	 android:gravity="center"
               	 android:textAppearance="?android:attr/textAppearanceListItem"
+              	 android:ellipsize="end"
+              	 android:maxLines="1"
                  />
          </LinearLayout>
  
