--- a/GameThis/res/layout/activity_cadastro_atividade.xml
+++ b/GameThis/res/layout/activity_cadastro_atividade.xml
@@ -35,11 +35,11 @@
 		
 		      <EditText
 		          android:id="@+id/input_pontos_atividade"
-		          android:layout_width="wrap_content"
+		          android:layout_width="50dp"
 		          android:layout_height="wrap_content"
 		          android:layout_marginLeft="30dp"
 		          android:focusable="false"
-		          android:inputType="" />
+		          android:inputType="number" />
       </LinearLayout>
     
     <LinearLayout
@@ -58,10 +58,11 @@
 		
 		      <EditText
 		          android:id="@+id/input_duracao_atividade"
-		          android:layout_width="wrap_content"
+		          android:layout_width="70dp"
 		          android:layout_height="wrap_content"
 		          android:layout_marginLeft="18dp"
-		          android:inputType="number" />
+		          android:inputType="number"
+		          android:maxLength="4" />
       </LinearLayout>
       
     
