--- a/GameThis/res/layout/activity_novo_jogo.xml
+++ b/GameThis/res/layout/activity_novo_jogo.xml
@@ -34,7 +34,7 @@
 		
 		      <EditText
 		          android:id="@+id/data_inicio"
-		          android:layout_width="wrap_content"
+		          android:layout_width="120dp"
 		          android:layout_height="wrap_content"
 		          android:layout_marginLeft="30dp"
 		          android:focusable="false"
@@ -56,7 +56,7 @@
 		
 		      <EditText
 		          android:id="@+id/data_termino"
-		          android:layout_width="wrap_content"
+		          android:layout_width="120dp"
 		          android:layout_height="wrap_content"
 		          android:layout_marginLeft="10dp"
 		          android:focusable="false"
