--- a/GameThis/res/layout/list_atividades_cadastradas.xml
+++ b/GameThis/res/layout/list_atividades_cadastradas.xml
@@ -5,39 +5,43 @@
     
      	<LinearLayout
               android:id="@+id/listAtividadePontos"
-              android:layout_width="0dp"
+              android:layout_width="60dp"
               android:layout_height="match_parent"
-              android:layout_weight="3">
               
+              android:orientation="horizontal">
+             
              <TextView 
                  android:id="@+id/textoPontosAtividade"
-                 android:layout_width="match_parent"
+                 android:layout_width="60dp"
               	 android:layout_height="match_parent"
               	 android:gravity="center"
               	 android:textAppearance="?android:attr/textAppearanceListItem"
+              	 android:text="@string/textoPontosAtividadeInfo"
+              	 android:textSize="15sp"
                  />
          </LinearLayout>
  
          <LinearLayout
               android:id="@+id/listAtividadesDescricao"
-              android:layout_width="0dp"
-              android:layout_height="match_parent"
-              android:layout_weight="3">
+              android:layout_width="180dp"
+              android:layout_height="match_parent">
              
              <TextView 
                  android:id="@+id/textoDescricaoAtividade"
                  android:layout_width="match_parent"
               	 android:layout_height="match_parent"
-              	 android:gravity="center"
+              	 android:gravity="left"
               	 android:textAppearance="?android:attr/textAppearanceListItem"
+              	 android:textSize="15sp"
+              	 android:ellipsize="end"
+              	 android:maxLines="1"
                  />
          </LinearLayout>
          
          <LinearLayout
               android:id="@+id/listAtividadesDuracao"
-              android:layout_width="0dp"
-              android:layout_height="match_parent"
-              android:layout_weight="3">
+              android:layout_width="40dp"
+              android:layout_height="match_parent">
              
              <TextView 
                  android:id="@+id/textoDuracaoAtividade"
@@ -45,6 +49,7 @@
               	 android:layout_height="match_parent"
               	 android:gravity="center"
               	 android:textAppearance="?android:attr/textAppearanceListItem"
+              	 android:textSize="15sp"
                  />
          </LinearLayout>
  
