--- a/GameThis/res/layout/activity_inscricao.xml
+++ b/GameThis/res/layout/activity_inscricao.xml
@@ -64,6 +64,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/texto_botao_inscricao_enviar"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textSize="18sp" />
 
 </LinearLayout>
