--- a/GameThis/res/layout/list_pesquisar_jogador.xml
+++ b/GameThis/res/layout/list_pesquisar_jogador.xml
@@ -3,35 +3,22 @@
 	    android:layout_width="match_parent"
 	    android:layout_height="40dp"
 	    android:orientation="horizontal" >
-    
-     	<LinearLayout
-              android:id="@+id/listJogadorAvatar"
-              android:layout_width="70dp"
-              android:layout_height="match_parent"
-              >
-              
+   
              <ImageView 
                  android:id="@+id/imagemJogadorLinha"
-                 android:layout_width="match_parent"
+                 android:layout_width="70dp"
               	 android:layout_height="match_parent"
                  />
-         </LinearLayout>
- 
-         <LinearLayout
-              android:id="@+id/listJogadorEmail"
-              android:layout_width="0dp"
-              android:layout_height="match_parent"
-              android:layout_weight="3">
-             
-             <TextView 
+
+             <TextView
                  android:id="@+id/textoEmailJogadorLinha"
                  android:layout_width="match_parent"
-              	 android:layout_height="match_parent"
-              	 android:gravity="center"
-              	 android:textAppearance="?android:attr/textAppearanceListItem"
-              	 android:ellipsize="end"
-              	 android:maxLines="1"
+                 android:layout_height="match_parent"
+                 android:ellipsize="end"
+                 android:gravity="center|left"
+                 android:maxLines="1"
+                 android:textAppearance="?android:attr/textAppearanceListItem"
+                 android:textSize="18sp" 
                  />
-         </LinearLayout>
- 
+             	
 </LinearLayout>
