--- a/GameThis/res/layout/list_selecionar_avatar.xml
+++ b/GameThis/res/layout/list_selecionar_avatar.xml
@@ -1,35 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:orientation="horizontal" >
-    
-     	<LinearLayout
               android:id="@+id/listAvatarImagem"
-              android:layout_width="0dp"
-              android:layout_height="match_parent"
-              android:layout_weight="3">
+              android:layout_width="match_parent"
+              android:layout_height="80dp"
+              android:orientation="horizontal"
+              >
               
              <ImageView 
                  android:id="@+id/imagemLinha"
-                 android:layout_width="match_parent"
+                 android:layout_width="90dp"
               	 android:layout_height="match_parent"
                  />
-         </LinearLayout>
- 
-         <LinearLayout
-              android:id="@+id/listAvatarTexto"
-              android:layout_width="0dp"
-              android:layout_height="match_parent"
-              android:layout_weight="3">
              
              <TextView 
                  android:id="@+id/textoLinha"
                  android:layout_width="match_parent"
               	 android:layout_height="match_parent"
-              	 android:gravity="center"
+              	 android:gravity="center"              	 
               	 android:textAppearance="?android:attr/textAppearanceListItem"
                  />
-         </LinearLayout>
- 
 </LinearLayout>
