--- a/GameThis/res/layout/activity_jogadores.xml
+++ b/GameThis/res/layout/activity_jogadores.xml
@@ -38,7 +38,7 @@
      
     
      <ListView  android:layout_width="fill_parent"   
-			    android:layout_height="150dp"   
+			    android:layout_height="fill_parent"   
 			    android:id="@+id/jogadoresAddedListView"
 			    android:layout_marginTop="140dp">  
      </ListView>
