--- a/GameThis/res/layout/activity_atividades.xml
+++ b/GameThis/res/layout/activity_atividades.xml
@@ -8,7 +8,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="br.com.recidev.gamethis.ui.AtividadesActivity" >
     
-    
     <Button
           android:id="@+id/botao_add_nova_atividade"
           style="?android:textAppearanceSmall"
@@ -17,17 +16,15 @@
           android:layout_marginTop="0dp"
           android:text="@string/texto_botao_add_nova_atividade" />
     
-
 	<TextView 
-                 android:id="@+id/textoListaJogadoresAdicionados"
-                 android:layout_width="match_parent"
-              	 android:layout_height="40dp"
-              	 android:layout_marginTop="80dp"
-              	 android:gravity="left"
-              	 android:text="@string/texto_atividades_cadastradas"
-              	 android:textSize="15sp"
-              	 android:textAppearance="?android:attr/textAppearanceListItem"
-                 />  
+        android:id="@+id/textoListaJogadoresAdicionados"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="80dp"
+        android:gravity="left"
+        android:text="@string/texto_atividades_cadastradas"
+        android:textSize="15sp"
+        android:textAppearance="?android:attr/textAppearanceListItem" />  
                  
      <Button
          android:id="@+id/botao_confirmar_lista_atividades"
@@ -39,11 +36,11 @@
          android:layout_marginRight="20dp"
          android:text="@string/ok_confirmar_lista_atividades" />
      
-     <ListView  android:layout_width="fill_parent"   
-			    android:layout_height="150dp"   
-			    android:id="@+id/atividadesAddedListView"
-			    android:layout_marginTop="130dp">  
+     <ListView  
+         android:layout_width="fill_parent"   
+		 android:layout_height="150dp"   
+		 android:id="@+id/atividadesAddedListView"
+		 android:layout_marginTop="130dp">  
      </ListView>
     
-
 </RelativeLayout>
