--- a/GameThis/res/layout/activity_detalhes_atividade_convidado.xml
+++ b/GameThis/res/layout/activity_detalhes_atividade_convidado.xml
@@ -77,7 +77,7 @@
 			        android:layout_height="wrap_content"
 			        android:layout_alignLeft="@+id/textoDuracaoAtividadeConvidado"
 			        android:layout_below="@+id/textoDuracaoAtividadeConvidado"
-			        android:layout_marginTop="18dp"
+			        android:layout_marginTop="15dp"
 			        android:text="Realizar atividade"
 			        android:textSize="15sp" />
 			    
@@ -85,7 +85,7 @@
 			        android:id="@+id/textoJogadorAtividade"
 			        android:layout_width="120dp"
 			        android:layout_height="30dp"
-			        android:layout_marginTop="230dp"
+			        android:layout_marginTop="225dp"
 			        android:gravity="center|left"
 			        android:maxLines="1"
 			        android:text="Atribuído para: "
@@ -96,7 +96,7 @@
 			         android:id="@+id/avatarJogador"
 			         android:layout_width="40dp"
 			         android:layout_height="40dp"
-			         android:layout_marginTop="260dp"
+			         android:layout_marginTop="255dp"
 			         android:src="@drawable/interrogacao" />
 				
 				    <TextView
@@ -104,11 +104,29 @@
 				        android:layout_width="300dp"
 				        android:layout_height="40dp"
 				        android:layout_marginLeft="20dp"
-				        android:layout_marginTop="260dp"
+				        android:layout_marginTop="255dp"
 				        android:layout_toRightOf="@+id/avatarJogador"
 				        android:ellipsize="end"
 				        android:gravity="center|left"
 				        android:maxLines="2"
 				        android:textSize="15sp" />
+				    
+				    <Button
+				        android:id="@+id/botao_confirmar_atribuicao_atividade"
+				        style="?android:textAppearanceSmall"
+				        android:layout_width="match_parent"
+				        android:layout_height="50dp"
+				        android:layout_marginTop="310dp"
+				        android:text="Confirmar"
+				        android:textSize="15sp" />
+				    
+				     <Button
+				         android:id="@+id/botao_concluir_atividade"
+				         style="?android:textAppearanceSmall"
+				         android:layout_width="match_parent"
+				         android:layout_height="50dp"
+				         android:layout_marginTop="370dp"
+				         android:text="Concluir Atividade"
+				         android:textSize="15sp" />
 
 </RelativeLayout>
