--- a/GameThis/res/layout/list_atividades_convidado.xml
+++ b/GameThis/res/layout/list_atividades_convidado.xml
@@ -16,24 +16,23 @@
 
              <TextView
                  android:id="@+id/textoDescricaoAtividadeConvidado"
-                 android:layout_width="180dp"
+                 android:layout_width="155dp"
                  android:layout_height="match_parent"
                  android:ellipsize="end"
                  android:gravity="center|left"
                  android:maxLines="1"
                  android:layout_marginLeft="20dp"
-                 android:text="Jantar"
                  android:textAppearance="?android:attr/textAppearanceListItem"
-                 android:textSize="18sp" 
+                 android:textSize="15sp" 
                  />
 
              <TextView 
                  android:id="@+id/textoDuracaoAtividadeConvidado"
-                 android:layout_width="40dp"
+                 android:layout_width="75dp"
                  android:layout_height="match_parent"
-                 android:gravity="center"
+                 android:gravity="center|left"
                  android:textAppearance="?android:attr/textAppearanceListItem"
-                 android:text="2"
+                 android:text="@string/textoDuracaoAtividadeConvidadoInfo"
                  android:textSize="15sp"
                  />
              	
