--- a/GameThis/res/layout/activity_jogadores.xml
+++ b/GameThis/res/layout/activity_jogadores.xml
@@ -27,12 +27,12 @@
                  
      <Button
          android:id="@+id/botao_confirmar_lista_jogadores"
-         style="?android:textAppearanceSmall"
          android:layout_width="50dp"
          android:layout_height="40dp"
          android:layout_alignParentRight="true"
          android:layout_marginTop="75dp"
          android:layout_marginRight="20dp"
+         android:textSize="15sp"
          android:text="@string/ok_confirmar_lista_jogadores" />
      
      
