--- a/GameThis/res/layout/activity_main.xml
+++ b/GameThis/res/layout/activity_main.xml
@@ -15,21 +15,21 @@
     
     <Button
                     android:id="@+id/botao_tela_login"
-                    style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="30dp"
                     android:text="@string/botao_tela_login"
-                    android:textStyle="bold" />
+                    android:textStyle="normal"
+                    android:textSize="16sp" />
     
     <Button
                     android:id="@+id/botao_tela_inscricao"
-                    style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="80dp"
                     android:text="@string/botao_tela_inscricao"
-                    android:textStyle="bold" />
+                    android:textStyle="normal"
+                    android:textSize="16sp" />
     
 
 </RelativeLayout>
